--- a/components/home/about/about.module.css
+++ b/components/home/about/about.module.css
@@ -6,7 +6,7 @@
     background-color: #FDEBDD;
     display: flex;
     flex-direction: column;
-    padding: 2em;
+    padding: 3em;
     font-family: Ubuntu, serif;
 }
 
@@ -59,7 +59,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    color: #1A1A1B;
+    color: #2a2a2a;
 }
 
 .info h5 {
