--- a/components/home/gallery/gallery.module.css
+++ b/components/home/gallery/gallery.module.css
@@ -2,11 +2,11 @@
 
 
 .galleryContainer {
-    border: 1px solid;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Ubuntu', sans-serif;
+    color: #2a2a2a;
     padding: 3em;
 }
 
