--- a/pages/image-upload/index.module.css
+++ b/pages/image-upload/index.module.css
@@ -9,9 +9,24 @@
     max-width: 900px;
 }
 
+
 .uploadContainer h2 {
     font-size: 2rem;
     margin-left: .5em;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header a{
+    font-size: 1.2rem;
+    color: #33A7A6;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .fontAwesome {
