--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -35,4 +35,9 @@
     font-family: Ubuntu, serif;
     text-decoration: none;
     cursor: pointer;
+    color: #2a2a2a;
+}
+
+.navLink:visited {
+    color: #2a2a2a;
 }
