fixed style import

--- a/components/home/gallery/gallery.module.css
+++ b/components/home/gallery/gallery.module.css
@@ -51,7 +51,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: black;
+    background-color: #2a2a2a;
     font-size: 2rem;
     color: #33A7A6;
 }
