--- a/components/home/hero/hero.module.css
+++ b/components/home/hero/hero.module.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     font-family: Ubuntu, serif;
-    color: white;
+    color: lightgray;
     margin: 10em 0 0 10em;
 }
 
