adjusted stats padding

--- a/components/home/testimonial/stats/stats.module.css
+++ b/components/home/testimonial/stats/stats.module.css
@@ -9,7 +9,7 @@
     font-family: 'Ubuntu', sans-serif;
     background-color: #FDEBDD;
     color: #2a2a2a;
-    padding: 1.5em 5em;
+    padding: 2.5em 5em 1.5em;
 }
 
 .stat {
