--- a/components/home/testimonial/stats/stats.module.css
+++ b/components/home/testimonial/stats/stats.module.css
@@ -35,3 +35,13 @@
 .description {
     font-size: 1rem
 }
+
+/* tablet styles */
+@media (max-width: 992px) {
+
+}
+
+/* mobile styles */
+@media (max-width: 688px) {
+
+}
