--- a/components/home/gallery/menu/menu.module.css
+++ b/components/home/gallery/menu/menu.module.css
@@ -9,7 +9,7 @@
     color: #2a2a2a;
     border-radius: 20px;
     padding: .5em 0;
-    width: 800px;
+    /*width: 800px;*/
     margin: 1em 0;
 }
 
