--- a/components/home/gallery/menu/menu.module.css
+++ b/components/home/gallery/menu/menu.module.css
@@ -9,7 +9,8 @@
     color: #2a2a2a;
     border-radius: 20px;
     padding: .5em 0;
-    /*width: 800px;*/
+    max-width: 80%;
+    /*width: 100px;*/
     margin: 1em 0;
 }
 
