--- a/components/home/hero/hero.module.css
+++ b/components/home/hero/hero.module.css
@@ -38,3 +38,64 @@
     width: 50%;
     line-height: 1.2;
 }
+
+
+/* tablet styles */
+@media (max-width: 992px) {
+.heroContainer {
+    background-color: black;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    padding-bottom: 5em;
+}
+
+.image {
+    background-size: contain;
+    background-position: center;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.heroHeading {
+    margin: 5em auto;
+    width: 70%;
+}
+
+
+
+.heroHeading p {
+    font-size: 1rem;
+    width: 80%;
+    line-height: 1.2;
+}
+}
+
+/* mobile styles */
+@media (max-width: 688px) {
+
+    .heroContainer {
+}
+
+.image {
+    background-size: contain;
+    background-position: center;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.heroHeading {
+    margin: 0 auto 1em;
+    width: 70%;
+    text-align: center;
+}
+
+
+
+.heroHeading p {
+    font-size: 1rem;
+    width: 100%;
+    line-height: 1.2;
+}
+}
+
