--- a/components/home/about/about.module.css
+++ b/components/home/about/about.module.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@300;400;500;700&display=swap');
-
-
 .aboutContainer {
     height: 500px;
     background-color: #FDEBDD;
@@ -83,3 +80,103 @@
     justify-content: space-between;
 }
 
+/* tablet styles */
+@media (max-width: 992px) {
+    .aboutContainer {
+        padding: 2em;
+    }
+
+    .decorationUpper {
+        justify-content: flex-end;
+    }
+
+    .linesUpper {
+        display: none;
+    }
+
+    .aboutBody {
+        justify-content: space-evenly;
+        margin: 0 0 2em;
+    }
+
+    .info {
+        padding: 0;
+        width: 70%;
+        align-items: center;
+    }
+
+    .info h5 {
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .info h2 {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem 0;
+    }
+
+    .info p {
+        text-align: center;
+        width: 80%;
+        font-size: 1.2rem;
+    }
+
+    .decorationLower {
+        justify-content: flex-start;
+    }
+
+    .diamondsLower {
+        display: none;
+    }
+}
+
+/* mobile styles */
+@media (max-width: 688px) {
+        .aboutContainer {
+            height: 600px;
+        padding: 2em 1em;
+    }
+
+    .aboutBody {
+        justify-content: space-evenly;
+        padding-bottom: 3em;
+    }
+
+    .images {
+        display: none;
+    }
+
+    .info {
+        padding: 0;
+        width: 100%;
+    }
+
+    .info h5 {
+        font-size: 1.3rem;
+    }
+
+    .info h2 {
+        text-align: center;
+        font-size: 1.6rem;
+        padding: 1rem 0;
+    }
+
+    .info p {
+        text-align: center;
+        width: 90%;
+        font-size: 1.3rem;
+        line-height: 1.3;
+    }
+
+    .decorationLower {
+        justify-content: flex-start;
+        margin-top: 3em;
+        padding-top: 3em;
+    }
+
+    .diamondsLower {
+        display: none;
+    }
+}
