--- a/components/home/gallery/gallery.module.css
+++ b/components/home/gallery/gallery.module.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@300;400;500;700&display=swap');
-
-
 .galleryContainer {
     display: flex;
     flex-direction: column;
@@ -35,9 +32,9 @@
     width: 90%;
     margin: 2em;
     display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 12em;
-  grid-gap: 1em;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 12em;
+    grid-gap: 1em;
 }
 
 .imageLink {
@@ -64,4 +61,43 @@
 /*  grid-row: span 2;*/
 /*}*/
 
+/* tablet styles */
+@media (max-width: 992px) {
+    .galleryContainer {
+        padding: 2em 1em;
+    }
+
+    .galleryContainer h2 {
+        font-size: 1.8rem;
+    }
+
+    .galleryContainer p {
+        font-size: 1.2rem;
+        padding: .7em 0 0;
+    }
+
+    .galleryNavigation {
+        width: 100%;
+    }
+
+    .imageContainer {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+/* mobile styles */
+@media (max-width: 688px) {
+        .galleryContainer {
+        padding: 2em .5em;
+    }
+
+    .imageContainer {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .image {
+        grid-row: span 2 !important;
+    }
+}
 
