--- a/components/home/gallery/gallery.module.css
+++ b/components/home/gallery/gallery.module.css
@@ -99,5 +99,9 @@
     .image {
         grid-row: span 2 !important;
     }
+    .galleryContainer p {
+        font-size: 1rem;
+        padding: .4em 0 0;
+    }
 }
 
