--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@300;400;500;700&display=swap');
-
-
 .footerContainer {
     display: flex;
     flex-direction: column;
@@ -40,4 +37,30 @@
 
 .navLink:visited {
     color: #2a2a2a;
+}
+
+/* tablet styles */
+@media (max-width: 992px) {
+.footerContainer {
+    padding: 1em 0 2em;
+}
+    .navContainer {
+        padding: 3em 0 2em;
+    }
+
+}
+
+/* mobile styles */
+@media (max-width: 688px) {
+    .footerContainer {
+        padding-bottom: 1em;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+.navContainer {
+    display: none;
+}
+.icon {
+    font-size: 2.5rem;
+}
 }
